<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="FB_CasingVibratoryBowl1" Id="{964fa243-99d7-4cd8-a60f-98887c839cc0}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CasingVibratoryBowl1
VAR_INPUT
    i_bEnabled : BOOL;
    i_bReset : BOOL;
END_VAR

VAR_OUTPUT
	o_bFaulted: BOOL;
    o_iCasingCount : INT; (* Counts number of casings processed *)
END_VAR

VAR
    iState : INT := 0;
    DelayTimer : TON;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE iState OF
    0: (* Idle/Off *)
        IF GVL_IO.DI_24VDC_CB_OK AND GVL_IO.DI_ECS THEN
            iState := 1;
        END_IF

    1: (* Wait for Product in Position *)
        DelayTimer(IN := TRUE, PT := T#50MS);
        IF DelayTimer.Q AND GVL_IO.DI_PE1 THEN
            iState := 2;
        END_IF

    2: (* Energize Track Index Solenoid *)
        GVL_IO.DO_PCYL3_E := TRUE;
        DelayTimer(IN := TRUE, PT := T#250MS);
        IF DelayTimer.Q THEN
            GVL_IO.DO_PCYL3_E := FALSE;
            iState := 3;
        END_IF

    3: (* Check Invert PE and Decide Path *)
        DelayTimer(IN := TRUE, PT := T#100MS);
        IF DelayTimer.Q THEN
            IF NOT GVL_IO.DI_PE2 THEN
                iState := 5;
            ELSE
                iState := 4;
            END_IF
        END_IF

    4: (* Energize Flipper Solenoid *)
        GVL_IO.DO_PCYL4_E := TRUE;
        DelayTimer(IN := TRUE, PT := T#150MS);
        IF DelayTimer.Q THEN
            GVL_IO.DO_PCYL4_E := FALSE;
            iState := 6;
        END_IF

    5: (* Energize Straight Through Solenoid *)
        GVL_IO.DO_PCYL5_E := TRUE;
        DelayTimer(IN := TRUE, PT := T#250MS);
        IF DelayTimer.Q THEN
            GVL_IO.DO_PCYL5_E := FALSE;
            iState := 2; (* Loop back *)
        END_IF

    6: (* Check High-Level Sensor *)
        DelayTimer(IN := TRUE, PT := T#500MS);
        IF DelayTimer.Q THEN
            IF GVL_IO.DI_PE4 THEN
                iState := 6; (* Pause and wait *)
            ELSE
                o_iCasingCount := o_iCasingCount + 1;
                iState := 2;
            END_IF
        END_IF
END_CASE

(* Reset logic *)
IF i_bReset THEN
    iState := 0;
    o_iCasingCount := 0;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="FB_CasingVibratoryBowl1">
      <LineId Id="23" Count="61" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>