<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="FB_CoreSwaging" Id="{32bb99d5-55a6-44d7-8d53-4198850662e4}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_CoreSwaging
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
    iState : INT := 0;
	FeedbackTimer : TON;
    DelayTimer : TON;
END_VAR


]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE iState OF
	0: (* Idle/Off, DI_ECS=FALSE *)
		(* Manual Mode Handling *)
		IF GVL_HMI.i_bCoreSwagingManualMode THEN
			IF GVL_IO.DI_JLU THEN (* Jog switch pressed *)
				(* Motor M3 runs infinitely while switch is pressed *)
				iState := 10;
			END_IF
		ELSE
			iState := 10;
		END_IF
		
	10: (* check safety conditions *)
		IF GVL_HMI.bSafeties AND GVL_IO.DI_ECS THEN (* Safeties OK and Enable Switch On *)
            GVL_IO.DO_M1 := TRUE; (* Start Oil Pump *)
			CheckFeedback(E_FT.PUMP);
			IF GVL_IO.DI_M1 THEN
				DelayAndAdvance(GVL_InitialSetting.PUMP_RunningDelayTime, iState+10);
			END_IF
        END_IF
		
    20: (* Ensure CYL6 is Extended *)
        IF NOT GVL_IO.DI_CYL6_E THEN
			GVL_IO.DO_SV1 := TRUE;	// Power Pack Hydraulic Pressure Relief Valve
            GVL_IO.DO_CYL6_E := TRUE;
			CheckFeedback(E_FT.CYL6_E);
        ELSE
			DelayAndAdvance(GVL_InitialSetting.CYLINDER6EXTENDED_RunningDelayTime, iState+1);
        END_IF
	21: (* Ensure CYL5 is Retracted *)
    	IF NOT GVL_IO.DI_CYL5_R THEN
			GVL_IO.DO_CYL5_R := TRUE;
			CheckFeedback(E_FT.CYL5_R);
		ELSE
			DelayAndAdvance(GVL_InitialSetting.CYLINDER5RETRACTED_RunningDelayTime, (iState + 10) / 10 * 10);
		END_IF
		
    30: (* Ensure CYL7 is Retracted *)
        IF NOT GVL_IO.DI_CYL7_R THEN
            GVL_IO.DO_CYL7_R := TRUE;
			CheckFeedback(E_FT.CYL7_R);
        ELSE
			DelayAndAdvance(GVL_InitialSetting.CYLINDER7RETRACTED_RunningDelayTime, iState+10);
        END_IF
    
    40: (* Low Lead Spool Check *)
        IF NOT GVL_IO.DI_PE5 THEN
			FB_SetAlarm( sMsg := GVL_AlarmMessage.LOW_LEAD_SPOOL );
        ELSE
			IF GVL_IO.DI_CYL4_R THEN
				(* index M3 *)
				
				iState := iState + 1;
			END_IF
        END_IF
	41: 
		DelayAndAdvance(GVL_InitialSetting.M3_RunningDelayTime, (iState + 10) / 10 * 10);
    
    50: (* Extend CYL7 *)
        IF NOT GVL_IO.DI_CYL7_E THEN
			GVL_IO.DO_CYL7_E := TRUE;
			CheckFeedback(E_FT.CYL7_E);
        ELSE
			DelayAndAdvance(GVL_InitialSetting.CYLINDER7EXTENDED_RunningDelayTime, iState + 10);
        END_IF
    
    60: (* Retract CYL6 *)
        IF NOT GVL_IO.DI_CYL6_R THEN
			GVL_IO.DO_CYL6_R := TRUE;
			CheckFeedback(E_FT.CYL6_R);
        ELSE
			DelayAndAdvance(GVL_InitialSetting.CYLINDER6RETRACTED_RunningDelayTime, iState + 10);
        END_IF
    
    70: (* Extend CYL5 *)
        IF NOT GVL_IO.DI_CYL5_E THEN
			GVL_IO.DO_CYL5_E := TRUE;
			CheckFeedback(E_FT.CYL5_E);
        ELSE
			DelayAndAdvance(GVL_InitialSetting.CYLINDER5EXTENDED_RunningDelayTime, iState + 10);
        END_IF
    
    80: (* Retract CYL5 *)
        IF NOT GVL_IO.DI_CYL5_R THEN
			GVL_IO.DO_CYL5_R := TRUE;
			CheckFeedback(E_FT.CYL5_R);
		ELSE
			DelayAndAdvance(GVL_InitialSetting.CYLINDER5RETRACTED_RunningDelayTime, iState + 10);
        END_IF
		
	90: (* Future Step *)
		iState := 20;
END_CASE
]]></ST>
    </Implementation>
    <Method Name="CheckFeedback" Id="{ca45cbb6-be73-4478-acca-2fc864d4bbed}">
      <Declaration><![CDATA[METHOD CheckFeedback : BOOL
VAR_INPUT
	t : E_FT;
END_VAR
VAR_OUTPUT
	o_nResult : INT := 0;	// -1: fail, 0: checking, 1: success 
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[FB_CheckFeedback(t:=t, FeedbackTimer:=FeedbackTimer);
o_nResult := FB_CheckFeedback.o_nResult;]]></ST>
      </Implementation>
    </Method>
    <Method Name="DelayAndAdvance" Id="{532274d9-37b2-4f3d-a542-0cdcb8beabdd}">
      <Declaration><![CDATA[METHOD DelayAndAdvance : BOOL
VAR_INPUT
	i_nDelayTime: INT;	// ms
	i_nNextState: INT;
END_VAR

VAR
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT DelayTimer.IN THEN
    DelayTimer(IN := TRUE, PT := INT_TO_TIME(i_nDelayTime));
ELSE
    IF DelayTimer.Q THEN 
        iState := i_nNextState; 
    END_IF
END_IF]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_CoreSwaging">
      <LineId Id="24" Count="1" />
      <LineId Id="288" Count="1" />
      <LineId Id="291" Count="1" />
      <LineId Id="296" Count="0" />
      <LineId Id="293" Count="1" />
      <LineId Id="26" Count="0" />
      <LineId Id="295" Count="0" />
      <LineId Id="27" Count="3" />
      <LineId Id="251" Count="0" />
      <LineId Id="300" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="301" Count="0" />
      <LineId Id="35" Count="2" />
      <LineId Id="363" Count="1" />
      <LineId Id="39" Count="0" />
      <LineId Id="254" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="155" Count="0" />
      <LineId Id="44" Count="0" />
      <LineId Id="151" Count="0" />
      <LineId Id="45" Count="1" />
      <LineId Id="256" Count="0" />
      <LineId Id="365" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="49" Count="4" />
      <LineId Id="304" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="161" Count="0" />
      <LineId Id="58" Count="3" />
      <LineId Id="63" Count="1" />
      <LineId Id="165" Count="0" />
      <LineId Id="169" Count="0" />
      <LineId Id="348" Count="0" />
      <LineId Id="322" Count="0" />
      <LineId Id="67" Count="1" />
      <LineId Id="323" Count="1" />
      <LineId Id="69" Count="1" />
      <LineId Id="325" Count="1" />
      <LineId Id="260" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="77" Count="1" />
      <LineId Id="327" Count="5" />
      <LineId Id="86" Count="1" />
      <LineId Id="334" Count="5" />
      <LineId Id="95" Count="1" />
      <LineId Id="341" Count="3" />
      <LineId Id="366" Count="0" />
      <LineId Id="346" Count="0" />
      <LineId Id="104" Count="4" />
      <LineId Id="227" Count="0" />
    </LineIds>
    <LineIds Name="FB_CoreSwaging.CheckFeedback">
      <LineId Id="5" Count="0" />
      <LineId Id="70" Count="0" />
    </LineIds>
    <LineIds Name="FB_CoreSwaging.DelayAndAdvance">
      <LineId Id="8" Count="5" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>